RESOLVED FIXED 263508
[text-box-edge] Fix computed values
https://bugs.webkit.org/show_bug.cgi?id=263508
Summary [text-box-edge] Fix computed values
Tim Nguyen (:ntim)
Reported 2023-10-22 01:10:25 PDT
getComputedStyle(element).textBoxEdge will return `leading leading`. However `leading leading` is an invalid value for `text-box-trim`. The `leading` value needs to be special cased so it only returns the value once.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-29 01:11:12 PDT
zak ridouh
Comment 2 2024-06-25 16:44:32 PDT
EWS
Comment 3 2024-06-27 04:39:06 PDT
Committed 280413@main (398e5e25e9f2): <https://commits.webkit.org/280413@main> Reviewed commits have been landed. Closing PR #30171 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.