[text-box-edge] Fix computed values https://bugs.webkit.org/show_bug.cgi?id=263508 rdar://117643064

Reviewed by Tim Nguyen.

 Combined changes:
 * LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/inheritance-expected.txt:
 * LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-edge-computed-expected.txt:
 * LayoutTests/imported/w3c/web-platform-tests/css/cssom/cssom-getPropertyValue-common-checks-expected.txt:
 * Source/WebCore/css/ComputedStyleExtractor.cpp:
 (WebCore::valueForTextBoxEdge):

Canonical link: https://commits.webkit.org/280413@main